force-app/main/default/objects/Punch_List_item__c/fields/Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact of the contracting company the punch list item is assigned to.</description>
    <inlineHelpText>Contact of the contracting company the punch list item is assigned to.</inlineHelpText>
    <label>Assigned Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Assigned_Contractor__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Punch_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>