force-app/main/default/objects/Punch_List_item__c/fields/Internal_Resource__c.field-meta.xml
<CustomField>
    <fullName>Internal_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Punch_List_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>